# research-pdf

./: .gitignore  demo.ipynb  pdf-net6.sln  python.ipynb
outputs/: 114319A-ocr.txt
pdf-net6/: Demo-Spire.cs  Program.cs  demo-itext7.cs  pdf-net6.csproj
pdf-netframework/: Demo-PdfSharp.cs  Program.cs  pdf-netframework.csproj
pdf-netframework/Properties/: AssemblyInfo.cs
py/: pyproject.toml
py/pypdf/: main.py
