[tool.poetry]
name = "pypdf"
version = "0.1.0"
description = ""
authors = ["krouw <felipe.andrez@live.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = {extras = ["full"], version = "^3.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
